cmake_minimum_required(VERSION 3.3)
project(oj)

set(CMAKE_CXX_STANDARD 11)

add_subdirectory(custom)
add_subdirectory(templates)
add_subdirectory(rqnoj)
add_subdirectory(hdu)
add_subdirectory(zoj)
add_subdirectory(hoj)
add_subdirectory(poj)
add_subdirectory(uoj)
add_subdirectory(uva)
add_subdirectory(ts)
add_subdirectory(loj)
