cmake_minimum_required(VERSION 3.3)
project(codeforces)

add_executable(codeforces1681A codeforces1681A.cpp)
add_executable(codeforces1690A codeforces1690A.cpp)
add_executable(codeforces1690B codeforces1690B.cpp)
add_executable(codeforces1690C codeforces1690C.cpp)
add_executable(codeforces1690D codeforces1690D.cpp)
add_executable(codeforces1690E codeforces1690E.cpp)
add_executable(codeforces1690F codeforces1690F.cpp)
add_executable(codeforces1690G codeforces1690G.cpp)
add_executable(codeforces1697A codeforces1697A.cpp)
add_executable(codeforces1697B codeforces1697B.cpp)
add_executable(codeforces1697C codeforces1697C.cpp)
