cmake_minimum_required(VERSION 3.3)
project(custom)

add_executable(tree tree.cpp)
add_executable(big_num big_num.cpp)
add_executable(length length.cpp)
add_executable(comb comb.cpp)
add_executable(round round.cpp)
add_executable(star star.cpp)
add_executable(bomb bomb.cpp)
add_executable(xor xor.cpp)
add_executable(milk milk.cpp)
add_executable(suspect suspect.cpp)
