cmake_minimum_required(VERSION 3.3)
project(custom)

add_executable(tree tree.cpp)
add_executable(big_num big_num.cpp)
add_executable(length length.cpp)
add_executable(comb comb.cpp)
add_executable(round round.cpp)
add_executable(star star.cpp)
add_executable(bomb bomb.cpp)
add_executable(xor xor.cpp)
add_executable(milk milk.cpp)
add_executable(suspect suspect.cpp)
add_executable(cutey cutey.cpp)
add_executable(traveller traveller.cpp)
add_executable(chess chess.cpp)
add_executable(deduce deduce.cpp)
add_executable(kill kill.cpp)
add_executable(racing racing.cpp)
add_executable(sequence sequence.cpp)
add_executable(mystery_door mystery_door.cpp)
add_executable(long_run long_run.cpp)
add_executable(guess guess.cpp)
add_executable(string string.cpp)
add_executable(triangle triangle.cpp)
add_executable(palin palin.cpp)
add_executable(ip_filter ip_filter.cpp)
