cmake_minimum_required(VERSION 3.3)
project(hdu)

add_executable(hdu1003 hdu1003.cpp)
add_executable(hdu1059 hdu1059.cpp)
add_executable(hdu1087 hdu1087.cpp)
add_executable(hdu1114 hdu1114.cpp)
add_executable(hdu1171 hdu1171.cpp)
add_executable(hdu1175 hdu1175.cpp)
add_executable(hdu1198 hdu1198.cpp)
add_executable(hdu1203 hdu1203.cpp)
add_executable(hdu1231 hdu1231.cpp)
add_executable(hdu1420 hdu1420.cpp)
add_executable(hdu1506 hdu1506.cpp)
add_executable(hdu2084 hdu2084.cpp)
add_executable(hdu2159 hdu2159.cpp)
add_executable(hdu2571 hdu2571.cpp)
add_executable(hdu2602 hdu2602.cpp)
add_executable(hdu2844 hdu2844.cpp)
add_executable(hdu2955 hdu2955.cpp)
add_executable(hdu3449 hdu3449.cpp)
add_executable(hdu3591 hdu3591.cpp)