cmake_minimum_required(VERSION 3.3)
project(poj)

add_executable(poj1004 poj1004.cpp)
add_executable(poj1077 poj1077.cpp)
add_executable(poj1185 poj1185.cpp)
add_executable(poj1376 poj1376.cpp)
add_executable(poj1852 poj1852.cpp)
add_executable(poj2421 poj2421.cpp)
add_executable(poj2484 poj2484.cpp)
add_executable(poj2559 poj2559.cpp)
add_executable(poj2887 poj2887.cpp)
add_executable(poj3254 poj3254.cpp)
add_executable(poj3628 poj3628.cpp)
