cmake_minimum_required(VERSION 3.3)
project(rqnoj)

add_executable(rqnoj5 rqnoj5.cpp)
add_executable(rqnoj6 rqnoj6.cpp)
add_executable(rqnoj57 rqnoj57.cpp)
add_executable(rqnoj72 rqnoj72.cpp)
add_executable(rqnoj95 rqnoj95.cpp)
add_executable(rqnoj98 rqnoj98.cpp)
add_executable(rqnoj162 rqnoj162.cpp)
add_executable(rqnoj311 rqnoj311.cpp)
add_executable(rqnoj490 rqnoj490.cpp)