cmake_minimum_required(VERSION 3.3)
project(ts)

add_executable(tsA1000 tsA1000.cpp)
add_executable(tsA1001 tsA1001.cpp)
add_executable(tsA1002 tsA1002.cpp)
add_executable(tsA1014 tsA1014.cpp)
add_executable(tsA1020 tsA1020.cpp)
add_executable(tsD13609 tsD13609.cpp)
add_executable(tsD13610 tsD13610.cpp)
add_executable(tsD13611 tsD13611.cpp)
add_executable(tsD13612 tsD13612.cpp)
add_executable(tsD13854 tsD13854.cpp)
add_executable(tsD13855 tsD13855.cpp)
add_executable(tsD13856 tsD13856.cpp)
add_executable(tsD13857 tsD13857.cpp)
add_executable(tsD13858 tsD13858.cpp)
