cmake_minimum_required(VERSION 3.3)
project(ts)

add_executable(tsA1000 tsA1000.cpp)
add_executable(tsA1001 tsA1001.cpp)
add_executable(tsA1002 tsA1002.cpp)
add_executable(tsA1014 tsA1014.cpp)
add_executable(tsA1020 tsA1020.cpp)
add_executable(tsA1021 tsA1021.cpp)
add_executable(tsA1026 tsA1026.cpp)
add_executable(tsA1027 tsA1027.cpp)
add_executable(tsA1080 tsA1080.cpp)
add_executable(tsD13609 tsD13609.cpp)
add_executable(tsD13610 tsD13610.cpp)
add_executable(tsD13611 tsD13611.cpp)
add_executable(tsD13612 tsD13612.cpp)
add_executable(tsD13854 tsD13854.cpp)
add_executable(tsD13855 tsD13855.cpp)
add_executable(tsD13856 tsD13856.cpp)
add_executable(tsD13857 tsD13857.cpp)
add_executable(tsD13858 tsD13858.cpp)
add_executable(tsD13920 tsD13920.cpp)
add_executable(tsD13921 tsD13921.cpp)
add_executable(tsD13922 tsD13922.cpp)
add_executable(tsD13923 tsD13923.cpp)
add_executable(tsD13924 tsD13924.cpp)
add_executable(tsD14013 tsD14013.cpp)
add_executable(tsD14014 tsD14014.cpp)
add_executable(tsD14015 tsD14015.cpp)
add_executable(tsD14016 tsD14016.cpp)
add_executable(tsD14017 tsD14017.cpp)
add_executable(tsD14225 tsD14225.cpp)
add_executable(tsD14226 tsD14226.cpp)
add_executable(tsD14227 tsD14227.cpp)
add_executable(tsD14228 tsD14228.cpp)
add_executable(tsD14258 tsD14258.cpp)
add_executable(tsD14259 tsD14259.cpp)
add_executable(tsD14260 tsD14260.cpp)
add_executable(tsD14262 tsD14262.cpp)
add_executable(tsD14409 tsD14409.cpp)
add_executable(tsD14536 tsD14536.cpp)
add_executable(tsD14627 tsD14627.cpp)
add_executable(tsD14729 tsD14729.cpp)
